--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { version = "1.47.1", features = ["full"] }
 uuid = { version = "1.17.0", features = ["v4"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+chrono = "0.4.41"
