--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,10 @@ axum = "0.8.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 include_dir = "0.7.4"
+prometheus = "0.13.4"
+sysinfo = "0.32.0"
+
+# Additional dependencies for examples
+reqwest = { version = "0.12.9", features = ["json"] }
+rand = "0.8.5"
+clap = { version = "4.4", features = ["derive"] }
